--- a/AppControl Manager/ReleaseNotes.txt
+++ b/AppControl Manager/ReleaseNotes.txt
@@ -1,9 +1,5 @@
-🩵 Updated major dependencies, including the .NET SDK, Windows App SDK, C++ platform tools and Rust toolchain, to the latest versions released just hours ago. These releases contain important security and reliability updates. AppControl Manager proactively stays current so users stay protected.
+Updated dependencies to the latest versions.
 
-🩵 Improved the visual design of the policy-creation mode selector on the Create Supplemental Policy and Create Deny Policy pages in the AppControl Manager.
+The Script Enforcement toggle is now enabled by default in the Create Policy Page. It's encouraged to keep it enabled to reduce attack surface from PowerShell.
 
-🩵 Updated the GitHub wiki documentation of the AppControl Manager and added details regarding the CommandLine Interface (CLI) support and usage.
-
-🩵 Fixed an issue that was preventing specific type of hardware from running one of the components of the AppControl Manager: https://github.com/HotCakeX/Harden-Windows-Security/issues/886
-
-🩵 Added CommandLine support for deploying the RMM (Remote Monitoring and Management) software blocking policy in Audit and Enforce mode. Please see the Wiki documentation for usage guide: https://github.com/HotCakeX/Harden-Windows-Security/wiki/AppControl-Manager
+Overall improvements to performance, code quality and bug fixes.
